[package]
name = "raph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
name = "_raph_bin"
path = "src/main.rs"
