[package]
name = "raph"
version = "0.1.1"
description = "AWS profile manager and executor"
homepage = "https://github.com/n-hass/raph"
repository = "https://github.com/n-hass/raph"
documentation = "https://github.com/n-hass/raph/blob/main/README.md"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"


[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
name = "_raph_bin"
path = "src/main.rs"
