[package]
name = "raph"
version = "0.1.2"
description = "AWS Profile Handler and executor"
homepage = "https://github.com/n-hass/raph"
repository = "https://github.com/n-hass/raph"
documentation = "https://github.com/n-hass/raph/blob/main/README.md"
readme = "README.md"
license = "mit"
edition = "2021"
exclude = [
    ".github",
    ".gitignore",
    ".vscode",
]

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
regex = "1.10.3"

[[bin]]
name = "_raph_bin"
path = "src/main.rs"
